<resources>
    <string name="app_name">Operativos Funeraria</string>
    <!-- Strings related to login -->
    <string name="prompt_user_name">Nombre de usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">Inicio de sesión</string>
    <string name="prompt_email">Email</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_reload">Recargar</string>

    <string name="menu_servicio">Servicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="location_change_receiver">android.location.PROVIDERS_CHANGED</string>
    <string name="menu_info">Info</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="action_refresh">Refrescar</string>
    <string name="err_msg_enter_user_name">El nombre de usuario es requerido</string>
    <string name="err_msg_enter_password">La contraseña es requerida</string>
    <string name="please_wait">Espera porfavor</string>
</resources>