<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_servicio">

    <fragment
        android:id="@+id/nav_servicio"
        android:name="com.pabs.operadores_funeraria.ui.main.ui.servicio.ServicioFragment"
        android:label="@string/menu_servicio"
        tools:layout="@layout/fragment_servicio" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.pabs.operadores_funeraria.ui.main.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.pabs.operadores_funeraria.ui.main.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>